CHER-164: Implement the client document entity